force-app/main/default/objects/Resident__c/Resident__c.object-meta.xml
<CustomObject>
    <label>Resident</label>
    <nameField>
        <label>Resident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>