force-app/main/default/objects/Resident__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipLabel>Residents</relationshipLabel>
    <relationshipName>Residents</relationshipName>
    <type>Lookup</type>
</CustomField>