force-app/main/default/objects/Resident__c/fields/Lease_End__c.field-meta.xml
<CustomField>
    <fullName>Lease_End__c</fullName>
    <formula>Lease__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease End</label>
    <type>Date</type>
</CustomField>