force-app/main/default/objects/Resident__c/fields/Lease_Start__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start__c</fullName>
    <formula>Lease__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Start</label>
    <type>Date</type>
</CustomField>