force-app/main/default/objects/Resident__c/validationRules/No_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Date</fullName>
    <active>true</active>
    <description>Validates field for birthday to be a date from past</description>
    <errorConditionFormula>Birthdate__c  &gt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Please choose a date from the past</errorMessage>
</ValidationRule>