force-app/main/default/objects/Resident__c/validationRules/Phone_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_format</fullName>
    <active>true</active>
    <description>Validates phone number to be in a certain format</description>
    <errorConditionFormula>NOT(REGEX( Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter 10 digits number for phone number</errorMessage>
</ValidationRule>